[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lilota"
version = "0.1.1"
authors = [
  { name="Tobias Rössler", email="tobiasroessler@gmail.com" },
]
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "pydantic>=2.0,<3.0",
  "alembic>=1.13,<2.0",
]
description = "A lightweight solution for long-running tasks"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
"lilota" = ["db/migrations/**", "db/migrations/**/**"]

[project.urls]
Homepage = "https://github.com/tobiasroessler/lilota"
Issues = "https://github.com/tobiasroessler/lilota/issues"